hphp/test/quick/yield_final.php.expectf
HipHop Fatal error: Cannot override final method A::method1() in %s on line 4
